--- a/Docs/development/10.installation/10.docker.md
+++ b/Docs/development/10.installation/10.docker.md
@@ -16,30 +16,19 @@ Hierfür existieren Beispiel-Dateien im Verzeichnis `.docker/db/secrets` (diese 
 Diese können kopiert und angepasst werden.
 
 ### Initialisierung
-Wenn man das Projekt das erste Mal startet:
+Wenn man das Projekt das erste Mal startet, sollte man folgende Reihenfolge einhalten:
+```bash
+docker-compose up -d --build migration
+```
+
+Jetzt sollte der Datenbank-Container starten und die Datenbank migrieren. 
+
+**Es kann sein, das die Datenbank nicht sofort verfügbar ist:**
+In diesem Fall kann man den Befehl einfach wiederholen.
+
+Jetzt kann man den Rest starten:
 ```bash
 docker-compose up -d --build
-```
-
-Jetzt sollten alle Container starten. Das Backend sollte jetzt nicht funktionieren, da die Datenbank noch nicht migriert wurde.
-
-### Migration
-Um die Datenbank zu migrieren, wird ein weiterer Container gestartet:
-```bash
-docker-compose up migration
-```
-
-Jetzt muss man das Backend neu starten:
-```bash
-docker-compose down backend # sollte auch ohne down funktionieren
-docker-compose up -d backend
-```
-
-### Temporary: 'Workaround' solange wir noch keine Auth haben:
-```bash
-docker exec -it ugh-db-1 mysql -u root -p
-GRANT ALL PRIVILEGES ON db.* TO 'user'@'localhost' IDENTIFIED BY 'password';
-FLUSH PRIVILEGES;
 ```
 
 ## Entwicklung
@@ -70,3 +59,7 @@ Proof this by checking your status in Docker Desktop's left bottom corner, shoul
 > Engine running
 
 If you did `docker-compose up migration`, you need to make sure to start `docker-compose up server` after that. Always check with `docker ps` if you're not sure which container are running atm 
+
+### Datenbank kann nicht verbunden werden
+* Wenn die Datenbank nicht verbunden werden kann, kann es sein, dass die Datenbank noch nicht bereit ist.
+* Sollte sie nach einiger Zeit immer noch nicht bereit sein, sollte man das volume `db_data` löschen und die Datenbank + Migration neu starten.
