--- a/Docs/development/10.installation/10.docker.md
+++ b/Docs/development/10.installation/10.docker.md
@@ -3,17 +3,22 @@
 Um das System lokal zu starten, wird Docker verwendet. Hierbei wird ein Container für die Datenbank und drei Container für die Anwendung erstellt.
 
 ## Setup
-Es Docker Secrets verwendet, um Informationen in die Container zu bringen.
+Es werden Docker Secrets verwendet, um Informationen in die Container zu bringen.
 
 ### Secrets
 Es werden folgende Secrets benötigt
 
 #### Datenbank
-- `db__root_password` -> `.docker/db/secrets/db__root_password.txt`
-- `db__user_password` -> `.docker/db/secrets/db__user_password.txt`
+* Secret-Variable `db__root_password` refers to file `.docker/db/secrets/db-root-password.txt`
+* Secret-Variable `db__user_password` refers to file `.docker/db/secrets/db-user-password.txt`
 
 Hierfür existieren Beispiel-Dateien im Verzeichnis `.docker/db/secrets` (diese haben einen . vor dem eigentlichen Namen).
-Diese können kopiert und angepasst werden.
+Diese können kopiert und angepasst werden:
+
+```bash
+cp .docker/db/secrets/.db-root-password.txt .docker/db/secrets/db-root-password.txt
+cp .docker/db/secrets/.db-user-password.txt .docker/db/secrets/db-user-password.txt
+```
 
 ### Initialisierung
 Wenn man das Projekt das erste Mal startet, sollte man folgende Reihenfolge einhalten:
