added explanations on how to use linux scripts

--- a/Docs/development/20.guide/10.directory-structure.md
+++ b/Docs/development/20.guide/10.directory-structure.md
@@ -10,6 +10,8 @@
 * * Hier befindet sich die Dokumentation.
 * [Frontend-Vuetify](../../../Frontend-Vuetify)
 * * Der Sourcecode des Frontends.
+* [scripts](../scripts)
+* * Hier befinden sich verschiedene Skripte für öfter benötigte Überprüfungen und Anpassungen.
 * [Ideen](../../../Ideen)
 * * Hier befinden sich Ideen, die noch nicht umgesetzt wurden.
 * [test-db](../../../test-db)
