Update docker docs: use fixed container name ugh-db

--- a/Docs/development/10.installation/10.docker.md
+++ b/Docs/development/10.installation/10.docker.md
@@ -47,7 +47,7 @@ Sollte es Änderungen an der Datenbank geben, dann müssen diese migriert werden
 
 ## Zugriff auf die Datenbank
 ```bash
-docker compose exec -it db mysql -u user -p
+docker exec -it ugh-db mysql -u user -p
 ```
 
 ## Anpassungen
